--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -1,1 +1,10 @@
-<h1>This is the recommend page.</h1>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<%- include('includes/head') %>
+	</head>
+	<body>
+		<%- include('includes/header') %> 
+		<%- include('includes/footer') %> 
+	</body>
+</html>
