--- a/public/styles/shared.css
+++ b/public/styles/shared.css
@@ -6,9 +6,12 @@ html {
 	--color-grey-100: rgb(250, 250, 250);
 	--color-grey-400: rgba(0, 0, 0, 0.4);
 	--color-grey-900: rgb(10, 10, 10);
+
+	--color-orange-900: #f34335;
 }
 
 body,
+h1,
 ul {
 	margin: 0;
 }
@@ -77,6 +80,22 @@ ul {
 #main-header nav a:hover {
 	background-color: var(--color-grey-100);
 	color: var(--color-grey-900);
+}
+
+.btn {
+	padding: 0;
+	border-radius: 5px;
+	font-size: 1.5rem;
+	color: var(--color-grey-100);
+	background-color: var(--color-orange-900);
+	font-family: 'Amatic SC', sans-serif;
+	border: none;
+	cursor: pointer;
+}
+
+.btn a {
+	display: flex;
+	padding: 5px 10px;
 }
 
 footer {
