--- a/views/restaurants.ejs
+++ b/views/restaurants.ejs
@@ -2,9 +2,24 @@
 <html lang="en">
 	<head>
 		<%- include('includes/head') %>
+		<link rel="stylesheet" href="styles/restaurants.css">
+		<title>Browse Restaurants</title>
 	</head>
 	<body>
-		<%- include('includes/header') %> 
-		<%- include('includes/footer') %> 
+		<%- include('includes/header') %>
+		<main>
+			<section id="description">
+				<h1>Recommended restaurants</h1>
+				<p id="tip">Find your next favourite restaurants with help of our other users.</p>
+				<p id="num-of-restaurants">We found 4 restaurant(s).</p>
+				<button class="btn">Change Order</button>
+			</section>
+			<section id="restaurants">
+				<ul>
+					<%- include('includes/restaurants/restaurant-item') %> 
+				</ul>
+			</section>
+		</main>
+		<%- include('includes/footer') %>
 	</body>
 </html>
