--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,9 +2,22 @@
 <html lang="en">
 	<head>
 		<%- include('includes/head') %>
+		<link rel="stylesheet" href="styles/about.css" />
+		<title>About YumSpot</title>
 	</head>
 	<body>
-		<%- include('includes/header') %> 
-		<%- include('includes/footer') %> 
+		<%- include('includes/header') %>
+		<main>
+			<h1>Make the world a tastier place!</h1>
+			<p>
+				YumSpot is a website for food enthusiasts that allows you to
+				share and discover amazing restaurants from all over the world.
+			</p>
+			<p>
+				You don't need to sign up or create an account - you can simply
+				start sharing right away.
+			</p>
+		</main>
+		<%- include('includes/footer') %>
 	</body>
 </html>
