feat: build confirm view
This builds confirm view and combines about and confirm CSS.

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<%- include('includes/head') %>
-		<link rel="stylesheet" href="styles/about.css" />
+		<link rel="stylesheet" href="styles/about-and-confirm.css" />
 		<title>About YumSpot</title>
 	</head>
 	<body>
