--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -2,9 +2,15 @@
 <html lang="en">
 	<head>
 		<%- include('includes/head') %>
+		<link rel="stylesheet" href="styles/about-and-confirm.css" />
+		<title>Success</title>
 	</head>
 	<body>
-		<%- include('includes/header') %> 
-		<%- include('includes/footer') %> 
+		<%- include('includes/header') %>
+		<main>
+			<h1>Success</h1>
+			<p>Your restaurant was successfully added to our list.</p>
+		</main>
+		<%- include('includes/footer') %>
 	</body>
 </html>
