feat: build restaurant-detail view

--- a/views/includes/restaurants/restaurant-item.ejs
+++ b/views/includes/restaurants/restaurant-item.ejs
@@ -8,7 +8,7 @@
 		<p id="opinion">It's amazing!</p>
 		<div id="action">
 			<button class="btn">
-				<a href="#">View Restaurant</a>
+				<a href="/restaurants/r1">View Restaurant</a>
 			</button>
 		</div>
 	</article>
