--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<%- include('includes/head') %>
-		<link rel="stylesheet" href="styles/index.css" />
+		<link rel="stylesheet" href="/styles/index.css" />
 		<title>YumSpot</title>
 	</head>
 	<body>
