--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<%- include('includes/head') %>
-		<link rel="stylesheet" href="styles/recommend.css" />
+		<link rel="stylesheet" href="/styles/recommend.css" />
 		<title>Share a Restaurant</title>
 	</head>
 	<body>
