--- a/views/restaurant-detail.ejs
+++ b/views/restaurant-detail.ejs
@@ -3,13 +3,17 @@
 	<head>
 		<%- include('includes/head') %>
 		<link rel="stylesheet" href="/styles/about-and-confirm.css" />
-		<title>Success</title>
+		<title>x</title>
 	</head>
 	<body>
 		<%- include('includes/header') %>
 		<main>
-			<h1>Success</h1>
-			<p>Your restaurant was successfully added to our list.</p>
+			<h1>Test Restaurant</h1>
+			<p>American | Greatstreet 7, Mycity</p>
+			<p>It's amazing!</p>
+			<button class="btn">
+				<a href="#">View Website</a>
+			</button>
 		</main>
 		<%- include('includes/footer') %>
 	</body>
