feat: add 404 and 500 error handlers
This handles if a page isn't found and something is wrong on the server.

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,13 +3,13 @@
 	<head>
 		<%- include('includes/head') %>
 		<link rel="stylesheet" href="/styles/align-and-font-size.css" />
-		<title>Success</title>
+		<title>Page Not Found</title>
 	</head>
 	<body>
 		<%- include('includes/header') %>
 		<main>
-			<h1>Success</h1>
-			<p>Your restaurant was successfully added to our list.</p>
+			<h1>Page not found!</h1>
+			<p>Unfortunately, we weren't able to find this page.</p>
 		</main>
 		<%- include('includes/footer') %>
 	</body>
