--- a/views/500.ejs
+++ b/views/500.ejs
@@ -3,13 +3,16 @@
 	<head>
 		<%- include('includes/head') %>
 		<link rel="stylesheet" href="/styles/align-and-font-size.css" />
-		<title>Success</title>
+		<title>Something Went Wrong</title>
 	</head>
 	<body>
 		<%- include('includes/header') %>
 		<main>
-			<h1>Success</h1>
-			<p>Your restaurant was successfully added to our list.</p>
+			<h1>Something went wrong!</h1>
+			<p>
+				Unfortunately, something went wrong on the server - we're doing
+				our best to fix it as quickly as possible.
+			</p>
 		</main>
 		<%- include('includes/footer') %>
 	</body>
