--- a/views/restaurant-detail.ejs
+++ b/views/restaurant-detail.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<%- include('includes/head') %>
-		<link rel="stylesheet" href="/styles/about-and-confirm.css" />
-		<title>x</title>
+		<link rel="stylesheet" href="/styles/align-and-font-size.css" />
+		<title>Restaurant Detail</title>
 	</head>
 	<body>
 		<%- include('includes/header') %>
