feat: add the ability to share a restaurant
This adds new shared restaurants to the restaurants.json file.

--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -9,7 +9,7 @@
 		<%- include('includes/header') %>
 		<main>
 			<h1>Share your favorite restaurant</h1>
-			<form action="" method="POST" id="share-restaurant-form">
+			<form action="/recommend" method="POST" id="share-restaurant-form">
 				<div class="form-input">
 					<label for="restaurant-name">Restaurant name</label>
 					<input type="text" name="name" id="restaurant-name" />
