feat: add the ability to browse restaurants
This shows the list of all restaurants added by users.

--- a/public/styles/restaurants.css
+++ b/public/styles/restaurants.css
@@ -29,13 +29,19 @@ h2 {
 	font-size: 1.8rem;
 }
 
+#description .btn {
+	padding: 5px 10px;
+}
+
 #restaurants {
 	width: 40%;
 	margin: 0 auto;
 }
 
-#description .btn {
-	padding: 5px 10px;
+#restaurants ul {
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
 }
 
 .restaurant-item {
