feat: view restaurant detail

--- a/views/includes/restaurants/restaurant-item.ejs
+++ b/views/includes/restaurants/restaurant-item.ejs
@@ -8,7 +8,7 @@
 		<p id="opinion"><%= restaurant.opinion %></p>
 		<div id="action">
 			<button class="btn">
-				<a href="/restaurants/r1">View Restaurant</a>
+				<a href="/restaurants/<%= restaurant.id %>">View Restaurant</a>
 			</button>
 		</div>
 	</article>
